tests/NormalTests/paczka1/small_fuzzy/97582253.err
Error in line 2: zXOa78gda S110 7,3
Error in line 6: zXOa78gda S710 38,4
